# isochrone

./: AGENTS.md  README.md  main.py  pyproject.toml  spec.md
static/: app.js  index.html  styles.css
tests/: test_api.py
